// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Left 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH isAFZs"
    data-js-slick="left"
    onClick={[Function]}
  >
    <img
      alt="left"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Right 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH jGUSLb"
    data-js-slick="right"
    onClick={[Function]}
  >
    <img
      alt="right"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots TwApps/atoms/ShowTweetButton Show Tweet Button 1`] = `
<button
  className="sc-iAyFgw igeRcE"
  onClick={[Function]}
  type="button"
>
  <div
    className="sc-hSdWYo eKUoqu"
  />
  <span
    className="sc-gzVnrw fWaMFq"
  >
    ツイートを
  </span>
  チラ見
</button>
`;

exports[`Storyshots TwApps/atoms/ToggleMenuButton Toggle Mute Button 1`] = `
<div
  className="sc-gZMcBi fnvJrE"
>
  <div
    className="sc-htoDjs deVqnZ"
  >
    <button
      className="sc-iwsKbI kKUZMy"
      onClick={[Function]}
    >
      <img
        alt="close"
        className="sc-dnqmqq fJDzFx menu-toggle-icon"
        src="[object Object]"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/Tweet Tweet 1`] = `
<div
  className="sc-gqjmRU bSmFDR"
>
  <p
    className="sc-VigVT cDQkhW"
  >
    ツイートの本文が表示されます
  </p>
  <ul
    className="sc-jTzLTM fqQobq"
  />
  <div
    className="sc-cSHVUG bFiudL"
  >
    <div
      className="sc-kAzzGY etLLBi"
    >
      <div
        className="sc-kgoBCf eGNunK"
      />
      <p
        className="sc-kGXeez esZsYw"
      >
        10
      </p>
    </div>
    <div
      className="sc-kAzzGY etLLBi"
    >
      <div
        className="sc-chPdSV cLzXSw"
      />
      <p
        className="sc-kpOJdX ShvVx"
      >
        11
      </p>
    </div>
    <a
      className="sc-dxgOiQ cwIdmR open-twitter-link"
      href="https://twitter.com/cha_han5656"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="sc-ckVGcZ fstHcG twitter-icon"
      />
      <span
        className="sc-jKJlTe gxJxRD pc-twitter-label"
      >
        twitterで見る
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/UnmuteButton Mobile 1`] = `
Array [
  <h2>
    PCサイズでは何も表示されない
  </h2>,
  <button
    className="sc-cMljjf dFrCwX"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-brqgnP cMmPdW unmute-icon"
    />
    ミュート解除
  </button>,
]
`;

exports[`Storyshots TwApps/atoms/UnmuteButton PC 1`] = `
Array [
  <h2>
    SPサイズでは何も表示されない
  </h2>,
  <button
    className="sc-jWBwVP cOcRwl"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-eHgmQL gdVspV mute-icon"
    />
    ミュート
  </button>,
]
`;

exports[`Storyshots TwApps/molecules/FatalMessage Fatal Message 1`] = `
<div
  className="sc-eNQAEJ fvIEkS"
>
  <div
    className="sc-hMqMXs iSHVjm"
  >
    <h2
      className="sc-kEYyzF dhMbyz"
    >
      エラーが発生しました
    </h2>
    <a
      className="sc-kkGfuU hOAbUp"
      href="http://localhost:6006"
    >
      Topへ戻る
    </a>
  </div>
</div>
`;
